--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "eslint": "^8.23.0",
     "father": "^4.1.0",
     "husky": "^8.0.1",
+    "less": "^4.2.2",
+    "less-loader": "^12.2.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "prettier-plugin-organize-imports": "^3.0.0",
