--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@types/lodash": "^4.17.16",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-table": "^7.7.20",
@@ -75,6 +76,8 @@
     "stylelint": "^14.9.1"
   },
   "dependencies": {
+    "antd": "^5.24.5",
+    "lodash": "^4.17.21",
     "react-table": "^7.8.0",
     "xlsx": "^0.18.5"
   }
