--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "stylelint": "^14.9.1"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "antd": "^5.24.5",
     "lodash": "^4.17.21",
     "react-table": "^7.8.0",
