--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-nexlif",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A react library developed with dumi",
   "license": "MIT",
   "author": "wangbaoqi",
@@ -51,6 +51,7 @@
     "ali-oss": "^6.22.0",
     "antd": "^5.24.5",
     "lodash": "^4.17.21",
+    "react-pdf": "^5.7.2",
     "react-table": "^7.8.0",
     "xlsx": "^0.18.5"
   },
@@ -74,8 +75,7 @@
     "prettier-plugin-packagejson": "^2.2.18",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "stylelint": "^14.9.1",
-    "react-pdf": "^5.6.0"
+    "stylelint": "^14.9.1"
   },
   "peerDependencies": {
     "react": ">=16.9.0",
